--- a/Hafidh-Riska/index.html
+++ b/Hafidh-Riska/index.html
@@ -62,7 +62,7 @@
         height: -webkit-fill-available;
     }
 
-    .carousel {
+    .carousel-item {
         height: -webkit-fill-available;
         align-content: center;
     }
