--- a/Hafidh-Riska/index.html
+++ b/Hafidh-Riska/index.html
@@ -62,11 +62,6 @@
         height: -webkit-fill-available;
     }
 
-    .carousel-item {
-        height: -webkit-fill-available;
-        align-content: center;
-    }
-
     body {
         height: -webkit-fill-available;
         align-content: center;
@@ -75,6 +70,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        display: block;
     }
 
     .pic {
