--- a/Hafidh-Riska/index.html
+++ b/Hafidh-Riska/index.html
@@ -23,7 +23,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active p-5">
                 <img src="./assets/cover.png" class="w3-animate-bottom pic">
-                <div class="w3-animate-bottom tujuan">
+                <div class="w3-animate-bottom" id="tujuan">
                     <p>Kepada Yth.</p>
                     <h1 id="tamu" class="p-0"></h1>
                     <p>& Keluarga<br />
