--- a/jkt48-theater/p/payment.html
+++ b/jkt48-theater/p/payment.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link href="../res/index.css" rel="stylesheet">
+    <link href="../r/index.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
@@ -23,11 +23,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-    <script src="../script/payment.js"></script>
+    <script src="../s/payment.js"></script>
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <a href="../index.html" class="logo"><img src="../res/logo.png"></a>
+        <a href="../index.html" class="logo"><img src="../r/logo.png"></a>
         <button class="btn btn-danger authBtn" id="logout-btn">Log Out</button>
         <button type="button" class="btn btn-light rounded-0 fw-bold" data-bs-toggle="modal" data-bs-target="#myModal">
             Cara Pembelian
@@ -64,13 +64,11 @@
         </div>
     </div>
     <div class="contain">
-        <p class="title-schedule fs-4">Show theater minggu ini:</p>
-        <!--p id="setlist" class="perform"></p-->
-        <p id="setlist" class="perform">Penjualan tiket tidak tersedia</p>
-        <!--
+        <p class="title-schedule fs-4">Show theater hari ini:</p>
+        <p id="setlist" class="perform"></p>
+        <!--p id="setlist" class="perform">Penjualan tiket tidak tersedia</p-->
         <p id="date" class="perform"></p>
         <p id="time" class="perform"></p>
-        -->
         <br>
         
         <div class="loading" id="fetch" style="display: none;">
@@ -90,7 +88,7 @@
             Nomor HP:
             <input class="form-control" type="tel" pattern="[0-9]{10,13}" id="phone" placeholder="Phone" required><br>
             Harga:
-            <input class="form-control" type="email" id="email" placeholder="Rp 10.000" disabled><br>
+            <input class="form-control" type="email" id="email" placeholder="Rp 15.000" disabled><br>
             <button class="btn btn-primary w-100" type="button" disabled id="loading">
                 <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
                 <span role="status">Loading...</span>
