--- a/jkt48-theater/p/signup.html
+++ b/jkt48-theater/p/signup.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link href="../res/index.css" rel="stylesheet">
+    <link href="../r/index.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
@@ -22,11 +22,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
 
-    <script src="../script/signup.js"></script>
+    <script src="../s/signup.js"></script>
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <a href="../index.html" class="logo"><img src="../res/logo.png"></a>
+        <a href="../index.html" class="logo"><img src="../r/logo.png"></a>
         <button type="button" class="btn btn-light rounded-0 fw-bold" data-bs-toggle="modal" data-bs-target="#myModal">
             Cara Pembelian
           </button>
