--- a/MemoarJump/index.html
+++ b/MemoarJump/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doodle Jump Canvas</title>
+    <title>Memoar Jump</title>
     <style>
         canvas {
             background: #87CEEB;
